--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
+
 node_modules
 /dist
+/.history
 
 # local env files
 .env.local
@@ -12,6 +14,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Editor directories and files
+
 .idea
 .vscode
 *.suo
